syntax = "proto3";

package proto;

option go_package = "github.com/babylonlabs-io/finality-provider/eotsmanager/proto";

// SigningRecord represents a record of a signing operation.
message SigningRecord {
  bytes block_hash = 1;     // The hash of the block.
  bytes public_key = 2;     // The public key used for signing.
  bytes signature = 3;      // The signature of the block.
  int64 timestamp = 4;      // The timestamp of the signing operation, in Unix seconds.
}